hard-gists/cc8647960afeb2c15a6061d7ab7e594e/run.log
=== Docker Run Log for cc8647960afeb2c15a6061d7ab7e594e ===
Started at: Mi 29. Okt 20:17:44 CET 2025

[2025-10-29 20:17:45] START: Running container for cc8647960afeb2c15a6061d7ab7e594e
[2025-10-29 20:17:45] SUCCESS: Container 5275f54ca33a46ff63968d948cfa92b296e712b6f061331d95cecec25a2a19b1 started for cc8647960afeb2c15a6061d7ab7e594e
=== Container logs for cc8647960afeb2c15a6061d7ab7e594e ===
  File "/snippet.py", line 116
    print "Retrying to get the correct response"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for cc8647960afeb2c15a6061d7ab7e594e ===
[2025-10-29 20:17:47] INFO: Container 5275f54ca33a46ff63968d948cfa92b296e712b6f061331d95cecec25a2a19b1 has stopped
